+ Добавлена таблица accounts + Добавлен BaseAuth middleware слой
