# internal/controllers/requests/create-account-request.go
@@ -1,0 +1,6 @@
+package requests
+
+type CreateAccountRequest struct {
+	Login    string `json:"login"`
+	Password string `json:"password"`
+}
