# internal/entities/account.go
@@ -1,0 +1,8 @@
+package entities
+
+type Account struct {
+	Id       int
+	Login    string
+	Password string
+	Salt     string
+}
