# main.go
@@ -4,9 +4,12 @@ import (
 	"backendForKeenEye/config"
 	_ "backendForKeenEye/docs"
 	"backendForKeenEye/internal/controllers"
+	"backendForKeenEye/internal/middleware"
 	"backendForKeenEye/internal/repositories"
 	"backendForKeenEye/internal/usecases"
+	encryption_service "backendForKeenEye/pkg/encryption-service"
 	"backendForKeenEye/pkg/postgres"
+	"context"
 	"fmt"
 	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
@@ -23,6 +26,9 @@ import (
 // @host localhost:8000
 // @BasePath /
 
+// @securityDefinitions.apikey BasicAuth
+// @in header
+// @name Authorization
 func main() {
 	cfg, err := config.NewConfig()
 	if err != nil {
@@ -41,15 +47,27 @@ func main() {
 		fmt.Println("failed to migrate:", err)
 	}
 
+	ctx := context.Background()
+
+	encryption := encryption_service.NewEncryptionService(cfg.Salt)
+
 	studentsRepo := repositories.NewStudentRepository(pgClient.Pool, pgClient.Builder)
+	accountsRepo := repositories.NewAccountRepository(pgClient.Pool, pgClient.Builder)
+
+	authService := usecases.NewAuthService(accountsRepo, encryption)
 
 	createStudentUsecase := usecases.NewCreateStudentUsecase(studentsRepo)
+	createAccountUsecase := usecases.NewCreateAccountUsecase(accountsRepo, encryption)
+
 	readAllStudentsUsecase := usecases.NewReadAllStudentsUsecase(studentsRepo)
 	readStudentUsecase := usecases.NewReadStudentUsecase(studentsRepo)
+
 	updateStudentUsecase := usecases.NewUpdateStudentUsecase(studentsRepo)
+
 	deleteStudentUsecase := usecases.NewDeleteStudentUsecase(studentsRepo)
 
 	studentController := controllers.NewStudentController(&createStudentUsecase, &readAllStudentsUsecase, &readStudentUsecase, &updateStudentUsecase, &deleteStudentUsecase)
+	accountController := controllers.NewAccountController(&createAccountUsecase)
 
 	router := gin.Default()
 
@@ -62,16 +80,19 @@ func main() {
 		MaxAge:           12 * time.Hour,
 	}))
 
+	authMiddleware := middleware.AuthMiddleware(ctx, authService)
+
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	router.POST("/api/create-student", studentController.CreateStudent)
+	router.POST("/api/create-student", authMiddleware, studentController.CreateStudent)
+	router.POST("/api/create-account", accountController.CreateAccount)
 
 	router.GET("/api/read-all-students", studentController.ReadAllStudents)
 	router.GET("/api/read-student", studentController.ReadStudent)
 
-	router.PUT("/api/update-student", studentController.UpdateStudent)
+	router.PUT("/api/update-student", authMiddleware, studentController.UpdateStudent)
 
-	router.DELETE("/api/delete-student", studentController.DeleteStudent)
+	router.DELETE("/api/delete-student", authMiddleware, studentController.DeleteStudent)
 
 	err = http.ListenAndServe(fmt.Sprintf(":%s", cfg.Port), router)
 	fmt.Println(err)
